@@ -3,6 +3,9 @@
 	* Fix build if FUSE_NODE_SLAB is not defined.  Patch by Emmanuel
 	Dreyfus
 
+	* Check for availability of utimensat() function.  Patch by
+	Emmanuel Dreyfus
+
 2011-12-07  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add fuse_lowlevel_notify_delete() which tells the kernel that a
